SERVER-17504 improved error message when stepping down node in a replica set without {force: true}